# DianGit

./: CMakeLists.txt  README.md  dghelp  diangit  diangit.c
include/: dgconst.h  dgtype.h  dgutils.h
src/: dghelp.c  dginit.c  dgtype.c  diangit.c  main.c
